--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,29 @@
   </head>
 
   <body>
+    <!--ERRORS AND ALERTS-->
+    <% if flash[:notice] %>
+      <p class="alert"><%= flash[:notice] %></p>
+    <% end %>
+    <% if flash[:alert] %>
+        <p class="alert"><%= flash[:alert] %></p>
+    <% end %>
+
+
+    <% if user_signed_in? %>
+      <p>Hello, <%= current_user.name %> - <%= link_to "Sign Out", destroy_user_session_path, :method => 'delete' %></p>
+    <% else %>
+
+      <%= link_to "Sign In", new_user_session_path %>
+      <%= link_to "Register", new_user_registration_path %>
+      
+    <% end %>
+
+
+
+
+
+
     <%= yield %>
   </body>
 </html>
