--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,6 +29,20 @@
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      
+
+        <td>
+          <%= link_to like_post_path(post), class: 'like', method: :put do %>
+          Like(<%= post.get_upvotes.size %>)
+          <% end %>
+        </td>
+        <td>
+          <%= link_to dislike_post_path(post), class: 'like', method: :put do %>
+          Unlike(<%= post.get_downvotes.size %>)
+          <% end %>
+        </td>
+      
+      
       </tr>
     <% end %>
   </tbody>
