--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,20 +3,18 @@
 <h1>Posts</h1>
 
 
-<!--puts seach input into posts path url-->
-<%= form_tag posts_path, method: 'get' do %>
 
-<%= text_field_tag :search, params[:search] %>
-<%= submit_tag "Search" %>
 
-<% end %>
-
+<%= render 'posts/form' %>
 
 <table>
   <thead>
     <tr>
-      <th>Body</th>
-      <th>User</th>
+      <!--
+
+        <th>User</th>
+        <th>Body</th>
+      -->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,21 +22,33 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%#= post.user_id %></td>
+        <td><%= post.user.user_name %> |</td>
+        
         <td><%= post.body %></td>
-        <td><%= post.user_id %></td>
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      
 
         <td>
+          <%= link_to edit_post_path(post) do %>
+          <%= image_tag 'edit.png' %>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to post, method: :delete, data: { confirm: 'Are you sure?' } do %>
+          <%= image_tag 'delete.png' %>
+          <% end %>
+        </td>
+      
+        <td>
           <%= link_to like_post_path(post), class: 'like', method: :put do %>
-          Like(<%= post.get_upvotes.size %>)
+          <%= image_tag 'thumb_up.png' %>    
+          (<%= post.get_upvotes.size %>)
           <% end %>
         </td>
         <td>
           <%= link_to dislike_post_path(post), class: 'like', method: :put do %>
-          Unlike(<%= post.get_downvotes.size %>)
+          <%= image_tag 'thumb_down.png' %>
+          (<%= post.get_downvotes.size %>)
           <% end %>
         </td>
       
@@ -50,4 +60,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%#= link_to 'New Post', new_post_path %>
